--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
+    <title>Marvel Snap in Movies</title>
+    <meta name="description" content="Which movies have which cards in Marvel Snap" />
+    <meta name="robots" content="noindex" />
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
