ui: improve page title

--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
-    <title>Marvel Snap in Movies</title>
+    <title>Marvel Snap on Screen</title>
     <meta name="description" content="Which movies have which cards in Marvel Snap" />
     <meta name="robots" content="noindex" />
   </head>
